fix footer text on small screen

--- a/CSS/comp.css
+++ b/CSS/comp.css
@@ -147,4 +147,8 @@ footer {
       .result.active {
         margin: 25px;
       }
+
+      .names {
+        font-size: 10px;
+      }
     }
