--- a/CSS/signpages.css
+++ b/CSS/signpages.css
@@ -183,4 +183,8 @@ footer {
     font-size: 15px;
   }
 
+  .names {
+    font-size: 10px;
+  }
+
 }
